--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE HTML> 
 <html> 
     <head> 
-        <title>SUMÉ</title>         
+        <title>SUMÉ | Site oficial</title>         
         <meta charset="utf-8" /> 
+        <!-- <script src="assets/Instafeed/instafeed.min.js" type="text/javascript" > </script>
+        <script type="text/javascript">
+    var feed = new Instafeed({
+        get: 'tagged',
+        tagName: 'awesome',
+        clientId: '6f497ea10bf74604ac9b39853ffe9f9e'
+    });
+    feed.run();
+</script> -->
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> 
         <link rel="stylesheet" href="assets/css/main.css" /> 
         <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->         
@@ -31,7 +40,7 @@
                             <a href="#work">&nbsp;Músicas<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">fanpage</a> 
+                            <a href="#intro">fanpage</a> 
                         </li>                         
                         <li class="">
                             <a href="#contact">Contato</a> 
@@ -43,92 +52,128 @@
             <!-- Main -->             
             <div id="main" class=""> 
                 <!-- Intro -->                 
-                <!--                 <article id="intro" class=""> 
+                <article id="intro"> 
                     <h2 class="major">SOBRE:</h2> 
-                    <span class="image main"></span> 
-                    <p>Sumé é um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
-                    <p></p> 
-                </article>   -->                 
-                <!-- Work -->                 
-                <article id="work" class="">
-                    <table class="">
-                        <h2 class="major">SABINA</h2>
-                        <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/EjyWtdOdp3c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></span>
-                    </table>
-                    <table class="">
-                        <h2 class="major">Zumbi</h2>
-                        <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/09T35XDb5F0?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></span>
-                    </table>                     
-                </article>                 
-                <!-- About -->                 
-                <article id="about" class=""> 
-                    <h2 class="major">sumé</h2> 
-                    <ul class="icons"> 
+                    <div id="Instafeed"> 
+</script>
+            </div>
+        </article>         
+        <!-- Work -->         
+        <article id="work" class="">
+            <h2>Zumbi<br></h2>
+            <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/09T35XDb5F0?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" class=""></iframe><ul class="icons" position="center" ""> 
+                    <li> 
+                        <a href="http://www.facebook.com/dialog/share?app_id=87741124305&amp;href=https%3A//www.youtube.com/attribution_link%3Fa%3D2JQin5w7dI8%26u%3D%252Fwatch%253Fv%253D09T35XDb5F0%2526feature%253Dshare&amp;display=popup&amp;redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
+                    </li>
+                    <li> 
+                        <a href="https://twitter.com/intent/tweet?url=https%3A//youtu.be/09T35XDb5F0&amp;text=Sum%C3%A9%20-%20Zumbi%20%28Original%20Mix%29&amp;via=YouTube&amp;related=YouTube,YouTubeTrends,YTCreators" class="icon fa-retweet" target="_blank"><span class="label">twitter</span></a> 
+                    </li>                     
+                    <li> 
+                        <a href="https://soundcloud.com/sumemusique/zumbi-original-mix" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                    </li>                     
+                    <li> 
+                        <a href="https://youtu.be/09T35XDb5F0" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                    </li>                     
+                    <li class=""> 
+                        <a href="https://theartistunion.com/tracks/6100b9" class="icon fa-download" target="_blank"><span class="label">Youtube</span></a> 
+                    </li>                     
+                </ul></span>
+            <table class="">
+</table>
+            <table class="">
+                <h2>sabina<br> </h2>
+                <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/EjyWtdOdp3c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center"> 
                         <li> 
-                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
+                            <a href="http://www.facebook.com/dialog/share?app_id=87741124305&href=https%3A//www.youtube.com/attribution_link%3Fa%3DH6iA97cJKYQ%26u%3D%252Fwatch%253Fv%253DEjyWtdOdp3c%2526feature%253Dshare&display=popup&redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
+                        </li>
+                        <li> 
+                            <a href="https://twitter.com/intent/tweet?url=https%3A//youtu.be/EjyWtdOdp3c&text=Sum%C3%A9%20-%20Sabina%20%28Original%20Mix%29&via=YouTube&related=YouTube,YouTubeTrends,YTCreators" class="icon fa-retweet" target="_blank"><span class="label">twitter</span></a> 
                         </li>                         
                         <li> 
-                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
+                            <a href="https://soundcloud.com/sumemusique/sabina-original-mix" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
                         </li>                         
                         <li> 
-                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                            <a href="https://www.youtube.com/watch?v=EjyWtdOdp3c" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                        </li>
+                        <li> 
+                            <a href="https://theartistunion.com/tracks/b0163e" class="icon fa-download" target="_blank"><span class="label">Youtube</span></a> 
                         </li>                         
-                        <li class=""> 
-                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
-                        </li>                         
-                    </ul>                     
-                    <span class="image main"><img src="images/pic01.jpg" alt="" /></span> 
-                    <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
-                </article>                 
-                <!-- Contact -->                 
-                <article id="contact" class=""> 
-                    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
-                        <div class="field half first"> 
-                            <label for="name">nome</label>                             
-                            <input type="text" name="name" id="name" required /> 
-                        </div>                         
-                        <div class="field half"> 
-                            <label for="email">Email</label>                             
-                            <input type="text" name="email" id="email" required /> 
-                            <span id="email-invalid" style="display:none"> 
+                    </ul></span>
+            </table>             
+        </article>         
+        <!-- About -->         
+        <article id="about" class=""> 
+            <h2 class="major">SUMÉ</h2>
+            <ul class="icons" position="center"> 
+                <li> 
+                    <a href="https://www.facebook.com/sumemusique/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
+                </li>                 
+                <li> 
+                    <a href="https://www.instagram.com/sumemusique/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
+                </li>                 
+                <li> 
+                    <a href="https://soundcloud.com/sumemusique" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                </li>                 
+                <li> 
+                    <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                </li>
+                <li> 
+                    <a href="_blank" class="icon fa-spotify" target="_blank"><span class="label">Youtube</span></a> 
+                </li>                 
+                <li> 
+                    <a href="https://twitter.com/sumemusique" class="icon fa-twitter" target="_blank"><span class="label">Youtube</span></a> 
+                </li>                 
+            </ul>
+            <span class="image main"><img src="images/pic01.jpg" alt="" /></span> 
+            <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
+        </article>         
+        <!-- Contact -->         
+        <article id="contact" class=""> 
+            <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
+                <div class="field half first"> 
+                    <label for="name">nome</label>                     
+                    <input type="text" name="name" id="name" required /> 
+                </div>                 
+                <div class="field half"> 
+                    <label for="email">Email</label>                     
+                    <input type="text" name="email" id="email" required /> 
+                    <span id="email-invalid" style="display:none"> 
         O e-mail precisa ser válido</span> 
-                        </div>                         
-                        <div class="field"> 
-                            <label for="message">mensagem</label>                             
-                            <textarea name="message" id="message" rows="4"></textarea>                             
-                        </div>                         
-                        <ul class="actions"> 
-                            <li> 
-                                <input type="submit" class="special" value="Enviar"> 
-                            </li>                             
-                            <li> 
-                                <input type="reset" value="Apagar tudo" /> 
-                            </li>                             
-                        </ul>                         
-                    </form>                     
-                    <div style="display:none;" id="thankyou_message"> 
-                        <h3>Obrigado por entrar em contato!</h3> 
-                        <h3>Retornarei sua mensagem em breve...</h3> 
-                    </div>                     
-                </article>                 
-                <!-- Elements -->                 
-                <article id="elements"> 
-                    <h2 class="major">Elements</h2> 
-                </article>                 
+                </div>                 
+                <div class="field"> 
+                    <label for="message">mensagem</label>                     
+                    <textarea name="message" id="message" rows="4"></textarea>                     
+                </div>                 
+                <ul class="actions"> 
+                    <li> 
+                        <input type="submit" class="special" value="Enviar"> 
+                    </li>                     
+                    <li> 
+                        <input type="reset" value="Apagar tudo" /> 
+                    </li>                     
+                </ul>                 
+            </form>             
+            <div style="display:none;" id="thankyou_message"> 
+                <h3>Obrigado por entrar em contato!</h3> 
+                <h3>Retornarei sua mensagem em breve...</h3> 
             </div>             
-            <!-- Footer -->             
-            <footer id="footer"> 
-</footer>             
-        </div>         
-        <!-- BG -->         
-        <div class="wrapper"> 
-            <div class="bg" id="bg"></div>             
-        </div>         
-        <!-- Scripts -->         
-        <script src="assets/js/jquery.min.js"></script>         
-        <script src="assets/js/skel.min.js"></script>         
-        <script src="assets/js/util.js"></script>         
-        <script src="assets/js/main.js"></script>         
-    </body>     
-    <script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>     
-</html>
+        </article>         
+        <!-- Elements -->         
+        <article id="elements"> 
+            <h2 class="major">Elements</h2> 
+        </article>         
+    </div>     
+    <!-- Footer -->     
+    <footer id="footer"> 
+</footer>     
+</div> 
+<!-- BG --> 
+<div class="wrapper"> 
+    <div class="bg" id="bg"></div>     
+</div> 
+<!-- Scripts --> 
+<script src="assets/js/jquery.min.js"></script> 
+<script src="assets/js/skel.min.js"></script> 
+<script src="assets/js/util.js"></script> 
+<script src="assets/js/main.js"></script> 
+<script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
