--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
     <head> 
         <title>SUMÉ | Site oficial</title>         
         <meta charset="utf-8" /> 
-        <!-- <script src="assets/Instafeed/instafeed.min.js" type="text/javascript" > </script>
-        <script type="text/javascript">
-    var feed = new Instafeed({
-        get: 'tagged',
-        tagName: 'awesome',
-        clientId: '6f497ea10bf74604ac9b39853ffe9f9e'
-    });
-    feed.run();
-</script> -->
+
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/magnific.css">
+
+        <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
+        
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> 
         <link rel="stylesheet" href="assets/css/main.css" /> 
         <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->         
         <noscript> 
             <link rel="stylesheet" href="assets/css/noscript.css" /> 
         </noscript>         
-    </head>     
-    <body class=""> 
+         </head>     
+         <body class=""> 
         <!-- Wrapper -->         
         <div id="wrapper" class="wrapper"> 
             <!-- Header -->             
             <header id="header" class=""> 
                 <div class="logo"> 
-</div>                 
+            </div>                 
                 <div class="content"> 
                     <div class="inner"> 
                         <img src="images/logo.png" height="250" width="250" /> 
@@ -40,26 +39,48 @@
                             <a href="#work">&nbsp;Músicas<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#intro">fanpage</a> 
+                            <a href="#galeria">fanpage</a> 
                         </li>                         
                         <li class="">
                             <a href="#contact">Contato</a> 
                         </li>                         
-                        <!--<li><a href="#elements">Elements</a></li>-->                         
+                            <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
                 </nav>                 
             </header>             
             <!-- Main -->             
             <div id="main" class=""> 
                 <!-- Intro -->                 
-                <article id="intro"> 
+                <article id="galeria"> 
                     <h2 class="major">SOBRE:</h2> 
-                    <div id="Instafeed"> 
-</script>
-            </div>
+<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'30o1jhtYgsAoEQpCOwQ'});Pixlee.addSimpleWidget({widgetId:'2134'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+ 
+
         </article>         
         <!-- Work -->         
         <article id="work" class="">
+              <table class="">
+            <h2>Pineal<br></h2>
+            <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/se6OtuONPRE?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center" ""> 
+                    <li> 
+                        <a href="https://www.facebook.com/dialog/share?app_id=87741124305&href=https%3A//www.youtube.com/attribution_link%3Fa%3DXkt4dRGako4%26u%3D%252Fwatch%253Fv%253Dse6OtuONPRE%2526feature%253Dshare&display=popup&redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
+                    </li>
+                    <li> 
+                        <a href="https://twitter.com/intent/tweet?url=https%3A//youtu.be/se6OtuONPRE&text=Sumé%20-%20Pineal%20(Original%20Mix)&via=YouTube&related=YouTube,YouTubeTrends,YTCreators" class="icon fa-retweet" target="_blank"><span class="label">twitter</span></a> 
+                    </li>                     
+                    <li> 
+                        <a href="https://soundcloud.com/sumemusique/pineal-original-mix" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                    </li>                     
+                    <li> 
+                        <a href="https://youtu.be/se6OtuONPRE" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                    </li>                     
+                    <li class=""> 
+                        <a href="https://theartistunion.com/tracks/4733ff" class="icon fa-download" target="_blank"><span class="label">Youtube</span></a> 
+                    </li>                     
+                </ul></span>
+
+</table>
+                        <table class="">
             <h2>Zumbi<br></h2>
             <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/09T35XDb5F0?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" class=""></iframe><ul class="icons" position="center" ""> 
                     <li> 
@@ -78,7 +99,7 @@
                         <a href="https://theartistunion.com/tracks/6100b9" class="icon fa-download" target="_blank"><span class="label">Youtube</span></a> 
                     </li>                     
                 </ul></span>
-            <table class="">
+
 </table>
             <table class="">
                 <h2>sabina<br> </h2>
@@ -118,7 +139,7 @@
                     <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
                 </li>
                 <li> 
-                    <a href="_blank" class="icon fa-spotify" target="_blank"><span class="label">Youtube</span></a> 
+                    <a href="https://open.spotify.com/artist/0H4TnrzWzIrNB5msJX62q5" class="icon fa-spotify" target="_blank"><span class="label">Youtube</span></a> 
                 </li>                 
                 <li> 
                     <a href="https://twitter.com/sumemusique" class="icon fa-twitter" target="_blank"><span class="label">Youtube</span></a> 
