--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE HTML> 
 <html> 
     <head> 
+
         <title>SUMÉ | Site oficial</title>         
         <meta charset="utf-8" /> 
-
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/instafeed.min.js"></script>
+<script src="assets/js/magnific.min.js"></script>
+<script src="assets/js/custom.js"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/magnific.css">
 
@@ -39,7 +43,7 @@
                             <a href="#work">&nbsp;Músicas<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#galeria">fanpage</a> 
+                            <a href="https://fb.me/sumemusique">fanpage</a> 
                         </li>                         
                         <li class="">
                             <a href="#contact">Contato</a> 
@@ -51,12 +55,19 @@
             <!-- Main -->             
             <div id="main" class=""> 
                 <!-- Intro -->                 
-                <article id="galeria"> 
+<!--                 <article id="fanpage"> 
                     <h2 class="major">SOBRE:</h2> 
-<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'30o1jhtYgsAoEQpCOwQ'});Pixlee.addSimpleWidget({widgetId:'2134'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+                    <span class="image main"><div id="instafeed">
+                        
+                        <script type="text/javascript">
+
+
+</script>
+                    </div></span>
+
  
 
-        </article>         
+        </article>    -->      
         <!-- Work -->         
         <article id="work" class="">
               <table class="">
@@ -69,7 +80,7 @@
                         <a href="https://twitter.com/intent/tweet?url=https%3A//youtu.be/se6OtuONPRE&text=Sumé%20-%20Pineal%20(Original%20Mix)&via=YouTube&related=YouTube,YouTubeTrends,YTCreators" class="icon fa-retweet" target="_blank"><span class="label">twitter</span></a> 
                     </li>                     
                     <li> 
-                        <a href="https://soundcloud.com/sumemusique/pineal-original-mix" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                        <a href="https://soundcloud.com/sumemusique/" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
                     </li>                     
                     <li> 
                         <a href="https://youtu.be/se6OtuONPRE" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
@@ -139,11 +150,12 @@
                     <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
                 </li>
                 <li> 
-                    <a href="https://open.spotify.com/artist/0H4TnrzWzIrNB5msJX62q5" class="icon fa-spotify" target="_blank"><span class="label">Youtube</span></a> 
+                    <a href="https://open.spotify.com/artist/0H4TnrzWzIrNB5msJX62q5" class="icon fa-spotify" target="_blank"><span class="label">Spotify</span></a> 
                 </li>                 
                 <li> 
-                    <a href="https://twitter.com/sumemusique" class="icon fa-twitter" target="_blank"><span class="label">Youtube</span></a> 
-                </li>                 
+                    <a href="https://twitter.com/sumemusique" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a> 
+                </li>   
+                        
             </ul>
             <span class="image main"><img src="images/pic01.jpg" alt="" /></span> 
             <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
