--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <article id="work" class="">
               <table class="">
             <h2>Pineal<br></h2>
-            <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/se6OtuONPRE?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center" ""> 
+            <span class="image main"><iframe width="560" height="auto" src="https://www.youtube.com/embed/se6OtuONPRE?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center" ""> 
                     <li> 
                         <a href="https://www.facebook.com/dialog/share?app_id=87741124305&href=https%3A//www.youtube.com/attribution_link%3Fa%3DXkt4dRGako4%26u%3D%252Fwatch%253Fv%253Dse6OtuONPRE%2526feature%253Dshare&display=popup&redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
                     </li>
@@ -93,7 +93,7 @@
 </table>
                         <table class="">
             <h2>Zumbi<br></h2>
-            <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/09T35XDb5F0?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" class=""></iframe><ul class="icons" position="center" ""> 
+            <span class="image main"><iframe width="560" height="auto" src="https://www.youtube.com/embed/09T35XDb5F0?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" class=""></iframe><ul class="icons" position="center" ""> 
                     <li> 
                         <a href="http://www.facebook.com/dialog/share?app_id=87741124305&amp;href=https%3A//www.youtube.com/attribution_link%3Fa%3D2JQin5w7dI8%26u%3D%252Fwatch%253Fv%253D09T35XDb5F0%2526feature%253Dshare&amp;display=popup&amp;redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
                     </li>
@@ -114,7 +114,7 @@
 </table>
             <table class="">
                 <h2>sabina<br> </h2>
-                <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/EjyWtdOdp3c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center"> 
+                <span class="image main"><iframe width="560" height="auto" src="https://www.youtube.com/embed/EjyWtdOdp3c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center"> 
                         <li> 
                             <a href="http://www.facebook.com/dialog/share?app_id=87741124305&href=https%3A//www.youtube.com/attribution_link%3Fa%3DH6iA97cJKYQ%26u%3D%252Fwatch%253Fv%253DEjyWtdOdp3c%2526feature%253Dshare&display=popup&redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
                         </li>
