--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="assets/js/custom.js"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/magnific.css">
-
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
         <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
