--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/magnific.css">
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'GA_TRACKING_ID');
+</script>
         
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> 
         <link rel="stylesheet" href="assets/css/main.css" /> 
