--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <a href="#work">&nbsp;Músicas<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="https://fb.me/sumemusique">fanpage</a> 
+                            <a href="https://fb.me/sumemusique" target="_blank">fanpage</a> 
                         </li>                         
                         <li class="">
                             <a href="#contact">Contato</a> 
