--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
                     </li>                     
                     <li> 
                         <a href="https://soundcloud.com/sumemusique/" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
-                    </li>                     
+                    </li> 
+                           <li> 
+                    <a href="https://open.spotify.com/album/0u2ETzDwQR5DC5PX61jb24" class="icon fa-spotify" target="_blank"><span class="label">Spotify</span></a> 
+                </li>                     
                     <li> 
                         <a href="https://youtu.be/se6OtuONPRE" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
                     </li>                     
@@ -113,7 +116,10 @@
                     </li>                     
                     <li> 
                         <a href="https://soundcloud.com/sumemusique/zumbi-original-mix" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
-                    </li>                     
+                    </li>  
+                                  <li> 
+                    <a href="https://open.spotify.com/album/4WsDzfx3PpCPfPLRx91r9a" class="icon fa-spotify" target="_blank"><span class="label">Spotify</span></a> 
+                </li>                    
                     <li> 
                         <a href="https://youtu.be/09T35XDb5F0" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
                     </li>                     
@@ -134,7 +140,10 @@
                         </li>                         
                         <li> 
                             <a href="https://soundcloud.com/sumemusique/sabina-original-mix" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
-                        </li>                         
+                        </li>  
+                                      <li> 
+                    <a href="https://open.spotify.com/album/0LYqJQGK3T4QchbhuLRZdF" class="icon fa-spotify" target="_blank"><span class="label">Spotify</span></a> 
+                </li>                        
                         <li> 
                             <a href="https://www.youtube.com/watch?v=EjyWtdOdp3c" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
                         </li>
