--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
                 <nav class=""> 
                     <ul class=""> 
                         <li class=""> 
-                            <a href="#about">Sobre<br></a> 
+                            <a href="#sobre">Sobre<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#work">&nbsp;Músicas<br></a> 
+                            <a href="#musicas">&nbsp;Músicas<br></a> 
                         </li>                         
                         <li class=""> 
                             <a href="https://fb.me/sumemusique" target="_blank">fanpage</a> 
                         </li>                         
                         <li class="">
-                            <a href="#contact">Contato</a> 
+                            <a href="#contato">Contato</a> 
                         </li>                         
                             <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
@@ -80,7 +80,7 @@
 
         </article>    -->      
         <!-- Work -->         
-        <article id="work" class="">
+        <article id="musicas" class="">
               <table class="">
             <h2>Pineal<br></h2>
             <span class="image main"><iframe width="560" height="auto" src="https://www.youtube.com/embed/se6OtuONPRE?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center" ""> 
@@ -154,7 +154,7 @@
             </table>             
         </article>         
         <!-- About -->         
-        <article id="about" class=""> 
+        <article id="sobre" class=""> 
             <h2 class="major">SUMÉ</h2>
             <ul class="icons" position="center"> 
                 <li> 
@@ -181,7 +181,7 @@
             <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
         </article>         
         <!-- Contact -->         
-        <article id="contact" class=""> 
+        <article id="contato" class=""> 
             <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
                 <div class="field half first"> 
                     <label for="name">nome</label>                     
