--- a/index.html
+++ b/index.html
@@ -75,7 +75,28 @@
                 <!-- Work -->                 
                 <article id="musicas" class=""> 
                     <table class=""> 
-                        <h2>netert<br></h2> 
+                        <h2>quântica<br></h2> 
+                        <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/qji2PfdviaQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center" ""> 
+                                <li> 
+                                    <a href="http://www.facebook.com/dialog/share?app_id=87741124305&href=https%3A//www.youtube.com/attribution_link%3Fa%3DqMOh3x1dr7k%26u%3D%252Fwatch%253Fv%253Dqji2PfdviaQ%2526feature%253Dshare&display=popup&redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="https://twitter.com/intent/tweet?url=https%3A//youtu.be/qji2PfdviaQ&text=Sum%C3%A9%20-%20Qu%C3%A2ntica%20%28Original%20Mix%29&via=YouTube&related=YouTube,YouTubeTrends,YTCreators" class="icon fa-retweet" target="_blank"><span class="label">twitter</span></a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="https://soundcloud.com/sumemusique/quantica" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="https://open.spotify.com/artist/0H4TnrzWzIrNB5msJX62q5" class="icon fa-spotify" target="_blank"><span class="label">Spotify</span></a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="https://youtu.be/qji2PfdviaQ" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                                </li>                                 
+                                <li class=""> 
+                                    <a href="https://theartistunion.com/tracks/1966dd" class="icon fa-download" target="_blank"><span class="label">Youtube</span></a> 
+                                </li>                                 
+                            </ul></span>
+                        <h2>netert<br></h2>
                         <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/D0hyqdZCAwk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center" ""> 
                                 <li> 
                                     <a href="http://www.facebook.com/dialog/share?app_id=87741124305&href=https%3A//www.youtube.com/attribution_link%3Fa%3Dj_C4zAtelpk%26u%3D%252Fwatch%253Fv%253DD0hyqdZCAwk%2526feature%253Dshare&display=popup&redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
