--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </table>                     
                     <table class=""> 
                         <h2>Zumbi<br></h2> 
-                        <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/EjyWtdOdp3c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center" ""> 
+                        <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/09T35XDb5F0?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center" ""> 
                                 <li> 
                                     <a href="http://www.facebook.com/dialog/share?app_id=87741124305&amp;href=https%3A//www.youtube.com/attribution_link%3Fa%3D2JQin5w7dI8%26u%3D%252Fwatch%253Fv%253D09T35XDb5F0%2526feature%253Dshare&amp;display=popup&amp;redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
                                 </li>                                 
@@ -227,7 +227,7 @@
                     </table>                     
                     <table class=""> 
                         <h2>sabina<br> </h2> 
-                        <span class="image main"><iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/346769067&color=%23110808&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><ul class="icons" position="center"> 
+                        <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/EjyWtdOdp3c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center"> 
                                 <li> 
                                     <a href="http://www.facebook.com/dialog/share?app_id=87741124305&href=https%3A//www.youtube.com/attribution_link%3Fa%3DH6iA97cJKYQ%26u%3D%252Fwatch%253Fv%253DEjyWtdOdp3c%2526feature%253Dshare&display=popup&redirect_uri=https://www.youtube.com/facebook_redirect" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
                                 </li>                                 
